[package]
name = "quartz"
version = "0.1.0"
edition = "2018"

[dependencies]

# encoding
ogg-sys = "0.0.9"
audiopus = "0.3.0-rc.0"

# decoding
symphonia = { version = "0.5", features = [ "aac", "alac", "mp3", "isomp4" ] }
samplerate = "0.2.4"
reqwest = { version = "0.11.11", features = ["json"] }
url = "2.2.2"

# framework
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = "1.16.1" # god i FUCK*ING hate tokio but i have no other choice
tokio-stream = "0.1.9"
async-stream = "0.3.2"
async-trait = "0.1.56"

# utils
parking_lot = "0.12.0"
spin_sleep = "1.0.0"
byteorder = "1.4.3"
bytes = "1.1.0"
anyhow = "1.0.58"
either = "1.6.1"
dotenv = "0.15.0"

# queue
rand = "0.8.5"

serde = { version = "1.0.136", features = ["derive"] }